# backend/models.py
@@ -1,8 +1,11 @@
 from typing import Optional
 from sqlmodel import Field, SQLModel
 
-class Hero(SQLModel, table=True):
+from datetime import datetime
+
+class DiaryEntry(SQLModel, table=True):
     id: Optional[int] = Field(default=None, primary_key=True)
-    name: str = Field(index=True)
-    secret_name: str
-    age: Optional[int] = Field(default=None, index=True)
+    title: str = Field(index=True)
+    content: str
+    mood: Optional[str] = None
+    created_at: datetime = Field(default_factory=datetime.utcnow)
